# gdsdk

./: Cargo.toml  LICENSE  README.md
examples/: generate_gds.rs  read_rewrite_gds.rs
src/: gds_error.rs  gds_model.rs  gds_parser.rs  gds_reader.rs  gds_record.rs  gds_writer.rs  lib.rs  main.rs  singleton_threadpool.rs
src/gds_model/: date.rs  lib.rs  library.rs  mod.rs  path.rs  points.rs  polygon.rs  property.rs  sref.rs  struc.rs  text.rs  vector.rs
src/gdsdk/: gds_model.rs  gds_parser.rs  gds_reader.rs  gds_record.rs  gds_writer.rs  mod.rs
src/gdsio/: gds_error.rs  gds_model.rs  gds_reader.rs  gds_record.rs  mod.rs
