[package]
name = "gdsdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Cache <faith_gentoo@163.com>"]
description = "Gdsii file development kit"
documentation = "https://github.com/MichaelCache/gdsdk"
readme = "README.md"
repository = "https://github.com/MichaelCache/gdsdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
chrono = "0.4.38"
petgraph = "0.6.5"
multi_index_map = "0.11.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
lazy_static = "1.5.0"